# serializer version: 1
# name: test_print
  dict({
    <class 'compiler.ast.PrintStmt'>: dict({
      'expr': dict({
        <class 'compiler.ast.literals.StringLiteral'>: dict({
          'value': 'hello world',
        }),
      }),
    }),
  })
# ---
# name: test_print.1
  dict({
    <class 'compiler.ast.PrintStmt'>: dict({
      'fields': dict({
        'expr': dict({
          <class 'compiler.ast.literals.StringLiteral'>: dict({
            'fields': dict({
            }),
            'type': <class 'compiler.langtypes.String'>,
          }),
        }),
      }),
    }),
  })
# ---
# name: test_print_variable
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'stmts': list([
        dict({
          <class 'compiler.ast.VariableDeclaration'>: dict({
            'ident': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.literals.IntLiteral'>: dict({
                'value': 2,
              }),
            }),
          }),
        }),
        dict({
          <class 'compiler.ast.PrintStmt'>: dict({
            'expr': dict({
              <class 'compiler.ast.Term'>: dict({
                'left': dict({
                  <class 'compiler.ast.Variable'>: dict({
                    'value': Token('IDENTIFIER', 'x'),
                  }),
                }),
                'op': Token('PLUS', '+'),
                'right': dict({
                  <class 'compiler.ast.literals.IntLiteral'>: dict({
                    'value': 1,
                  }),
                }),
              }),
            }),
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_print_variable.1
  dict({
    <class 'compiler.ast.StatementList'>: dict({
      'fields': dict({
        'stmts': list([
          dict({
            <class 'compiler.ast.VariableDeclaration'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.literals.IntLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
              }),
            }),
          }),
          dict({
            <class 'compiler.ast.PrintStmt'>: dict({
              'fields': dict({
                'expr': dict({
                  <class 'compiler.ast.Term'>: dict({
                    'fields': dict({
                      'left': dict({
                        <class 'compiler.ast.Variable'>: dict({
                          'fields': dict({
                          }),
                          'type': <class 'compiler.langtypes.Int'>,
                        }),
                      }),
                      'right': dict({
                        <class 'compiler.ast.literals.IntLiteral'>: dict({
                          'fields': dict({
                          }),
                          'type': <class 'compiler.langtypes.Int'>,
                        }),
                      }),
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
              }),
            }),
          }),
        ]),
      }),
    }),
  })
# ---
